Updated ass1 to include my information

--- a/assignment1.html
+++ b/assignment1.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
   Assignment #1 - REMEMBER TO FOLLOW THE STYLE GUIDE
 
   1. Fork your own version of this repo
@@ -13,16 +13,22 @@
     <title>Assignment 1</title>
   </head>
   <body>
-    <!--
-      In this section (<body>), create a h1 tag stating your name
-      Beneath that, create an unordered list with at least 3 list items
-      that describe your web development experience (if any, it's ok if this is all new :D)
-
-      This is just a quick exercise to show that you know how to work with git and GitHub
-      No styling or scripting is required for this assignment
-
-      If you don't know how to make the above mentioned tags, either take a look around on
-      the internet, or don't hesitate to ask me!
-    -->
+    <h1>
+      David Anderson
+    </h1>
+    <ul>
+      <li>
+        I Began learning basic web design using Dreamweaver and getting certified in Dreamweaver CS4 in high school (2012).
+      </li>
+      <li>
+        Worked for a year at a basic web design startup before I transferred to Pitt (2014). Learned about WordPress, muse, and how to make basic production websites.
+      </li>
+      <li>
+        This last semester at my work, I started to try and learn react and jQuery but was overwhelmed with the amount of new material.4
+      </li>
+      <li>
+        I haven’t  done basic web design in a couple of years, but I am most excited to learn more about javascript and php due to me not having any experience with them.
+      </li>
+    </ul>
   </body>
 </html>
